bin.starchild.network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/cloudflare-ca"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-error-page: "https://error.starchild.network/cert-tls-auth"
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: bin.starchild.network
spec:
  ingressClassName: nginx
  rules:
    - host: bin.starchild.network
      http:
        paths:
          - backend:
              service:
                name: bin-starchild-network
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - bin.starchild.network
      secretName: bin-starchild-network-tls
